Mejora de las pruebas XAdES